file(GLOB SOURCES "*.cpp")

add_library(${PROJECT_NAME}_rt ${SOURCES})

target_include_directories(${PROJECT_NAME}_rt PUBLIC
  $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>
  $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)

install(TARGETS ${PROJECT_NAME}_rt
        EXPORT ${PROJECT_NAME}_rt-config
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
        INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})

install(DIRECTORY ${PROJECT_SOURCE_DIR}/src/pmt/rt/
        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/pmt/rt
        FILES_MATCHING PATTERN "*.hpp")

install(EXPORT ${PROJECT_NAME}_rt-config
        FILE ${PROJECT_NAME}_rt-config.cmake
        DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}_rt)
